# production-fraud-detection-system

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  main.py  mlflow_ui.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
airflow/dags/: drift_detection_dag.py  retraining_dag.py
configs/: drift_config.yaml  model_config.yaml
data/processed/: .gitignore  encodings.pkl.dvc  feature_columns.txt  fraud_sample.csv  train_features.parquet.dvc  tuned_params.json
data/production/: raw_transactions.parquet  recent_predictions.parquet  scored_features.parquet
data/raw/: .gitignore  test_identity.csv.dvc  test_transaction.csv.dvc
docker/: init-db.sql
docker/airflow/: Dockerfile
docker/inference/: Dockerfile
docker/mlflow/: Dockerfile
feature_repo/: data_sources.py  entities.py  feature_store.yaml  features.py
monitoring/grafana/dashboards/: fraud_detection.json
monitoring/grafana/provisioning/: dashboards.yml  datasources.yml
monitoring/prometheus/: prometheus.yml
scripts/: bootstrap_redis.py  feast_apply.py  feast_materialize.py
src/explainability/: shap_analysis.py
src/feature_store/: __init__.py  feast_store.py  online_store.py
src/features/: categorical_encoder.py  pipeline.py  time_features.py  user_aggregations.py  velocity_features.py
src/inference/: app.py  batch_predictor.py  predictor.py  schemas.py
src/ingestion/: loader.py  validator.py
src/monitoring/: drift_detector.py  metrics_exporter.py
src/registry/: model_manager.py
src/retraining/: trigger.py
src/training/: evaluator.py  threshold_optimizer.py  train.py  tuning.py
src/training/models/: catboost_model.py  lightgbm_model.py  xgboost_model.py
tests/data/: attack_batch.json
tests/integration/: test_docker_stack.py  test_inference.py
tests/performance/: test_model_gates.py
tests/unit/: test_drift_detector.py  test_features.py  test_predictor.py  test_shap_analysis.py  test_validator.py
