[project]
name = "production-fraud-detection-system"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "dvc>=3.67.1",
    "evidently>=0.7.21",
    "fastapi>=0.135.3",
    "feast[redis]>=0.19.3",
    "httpx>=0.28.1",
    "lightgbm>=4.6.0",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "prometheus-client>=0.25.0",
    "protobuf>=3.20.0,<4.0.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "redis>=3.5.3",
    "scikit-learn>=1.8.0",
    "setuptools==69.5.1",
    "shap>=0.51.0",
    "sqlalchemy==1.4.46",
    "uvicorn>=0.44.0",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
all = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
