[project]
name = "production-fraud-detection-system"
version = "0.1.0"
description = "Production-grade fraud detection system"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.0",
    "dvc>=3.0.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "lightgbm>=4.0.0",
    "mlflow>=2.10.0,<3.0.0",
    "numpy>=2.0.0,<3.0.0",
    "optuna>=3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "prometheus-client>=0.20.0",
    "psycopg2-binary>=2.9.0",
    "pyarrow>=14.0.0",
    "pytest>=8.0.0",
    "redis>=5.0.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "setuptools>=69.0.0",
    "shap>=0.43.0",
    "sqlalchemy==1.4.46",
    "uvicorn>=0.29.0",
    "xgboost>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
all = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
